chore: change plugin name to squaremap-plotsquared chore: adjust default fill/stroke opacity

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: SquaremapPlotSquared
+name: squaremap-plotsquared
 version: "${version}"
 description: "A squaremap implementation for PlotSquared."
 authors: [Log1x]
